--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -37,14 +37,14 @@
     position: relative;
     padding: 0 2rem;
 
-    &__poster {
+    &_poster {
         flex: 1;
 
         @include mobile {
             display: none;
         }
 
-        &__img {
+        &_img {
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
@@ -53,7 +53,7 @@
         }
     }
 
-    &__info {
+    &_info {
         width: 70%;
         padding-left: 2rem;
         position: relative;
@@ -77,7 +77,7 @@
                 margin-left: 0.5rem;
             }
 
-            &__item {
+            &_item {
                 padding: 0.5rem 1.5rem;
                 border: 2px solid $white;
                 border-radius: $border-radius;
@@ -94,14 +94,14 @@
     grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
     gap: 10px;
 
-    &__item {
-        &__img {
+    &_item {
+        &_img {
             padding-top: 160px;
             background-size: cover;
             margin-bottom: 0.5rem;
         }
 
-        &__name {
+        &_name {
             font-size: 0.8rem;
         }
     }
@@ -110,7 +110,7 @@
 .video {
     margin-bottom: 3rem;
 
-    &__title {
+    &_title {
         margin-bottom: 1.5rem;
     }
 }
