--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,11 +1,11 @@
-$body-bg: #0f0f0f;
-$main-color: #ff0000;
+$body-bg: #2b001c;
+$main-color: #a60202;
 $txt-color: #fff;
 
 $white: #fff;
 $black: #000;
 
-$box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+$box-shadow: rgb(255, 255, 255) 0px 7px 29px 0px;
 
 $header-height: 8rem;
 $header-shrink-height: 5rem;
